# PatchGuru

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  setup_keras.sh  setup_marshmallow.sh  setup_pandas.sh  setup_scipy.sh  setup_scipy_to_run_in_container.sh
multilspy/: README.md  language_server.py  multilspy_config.py  multilspy_exceptions.py  multilspy_types.py  multilspy_utils.py  type_helpers.py
multilspy/language_servers/eclipse_jdtls/: initialize_params.json  runtime_dependencies.json
multilspy/language_servers/jedi_language_server/: initialize_params.json
multilspy/language_servers/omnisharp/: initialize_params.json  runtime_dependencies.json
multilspy/language_servers/rust_analyzer/: initialize_params.json  runtime_dependencies.json  rust_analyzer.py
mutmut/: .readthedocs.yaml  requirements.txt
mutmut/docs/_templates/: ghbuttons.html  sidebarlogo.html
mutmut/docs/_themes/flask/: layout.html
mutmut/e2e_projects/my_lib/src/my_lib/: __init__.py
mutmut/mutmut/: file_mutation.py  trampoline_templates.py
mutmut/tests/e2e/snapshots/: config.json  my_lib.json
patchguru/: BugReplay.py  Config.py  SpecInfer.py
patchguru/analysis/: BugTrigger.py  IntentAnalysis.py  PRRetriever.py  TestDriverRepair.py  TestDriverReview.py
patchguru/execution/: DockerExecutor.py  Executor.py
patchguru/experiments/: BugInjection.py  MutationAnalysis.py  PRCollector.py  RQ1_3.py  RQ2.py  RQ4.py  RegressionTestsCoverage.py
patchguru/llms/: OpenAI.py
patchguru/prompts/bug_trigger/: BugTriggerPromptV1.py
patchguru/prompts/data_synthesis/: DataSynthesisPrompt.py  FuzzerInsertionPrompt.py  MutationGenerationPrompt.py
patchguru/prompts/error_repair/: AssertionErrorRepairPromptV1.py  RuntimeErrorRepairPromptV1.py  SyntaxErrorRepairPromptV1.py
patchguru/prompts/intent_analysis/: IntentAnalysisPromptV1.py
patchguru/prompts/reference_summary/: ReferenceSummaryPromptV1.py
patchguru/prompts/self_review/: SelfReviewPromptV1.py
patchguru/utils/: ClonedRepoManager.py  CodeMutation.py  Logger.py  PullRequest.py  PythonCodeUtil.py  PythonLanguageServer.py  Tracker.py
